# Roulette

./: README.md  io.github.diegoivan.roulette.json  meson.build
data/: io.github.diegoivan.roulette.appdata.xml.in  io.github.diegoivan.roulette.desktop.in  io.github.diegoivan.roulette.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: ArcNode.vala  CairoArcNode.vala  Roulette.vala  ValidableNode.vala  ValidatableNode.vala  application.vala  main.vala  meson.build  roulette.gresource.xml  style.css  window.ui  window.vala
src/Color/: ColorProvider.vala  ResourceColorProvider.vala  hig-colors.txt
src/Factories/: ArcNodeFactory.vala
src/Models/: RouletteItem.vala
src/Render/: CairoArcNode.vala  GLArcNode.vala
src/glsl/: arc.glsl
